There is no longer a gap in the mobile toolbar and now the toolbar should be the highest thing across all pages.

--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -7263,7 +7263,7 @@ div#toolbar {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 9999;
   width: 100%;
   background: #F4F4F4;
   padding-left: 10px;
