--- a/app/webroot/css/ui/toolbar.less
+++ b/app/webroot/css/ui/toolbar.less
@@ -10,7 +10,7 @@ div#toolbar {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 9999;
     width: 100%;
     background: @ToolbarColor;
     //  margin-bottom: 10px;
